--- a/app/assets/stylesheets/pages/_list-show.scss
+++ b/app/assets/stylesheets/pages/_list-show.scss
@@ -61,18 +61,49 @@
   margin-left: 0px;
 }
 
+.list-tabs {
+  color: #ffffff;
+  margin: 0;
+}
+.tab-list {
+  background-color: $turquoise;
+  padding: 10px;
+  border-radius: 5px 10px 0px 0px;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+
+  &:hover {
+    color: white;
+  }
+}
+.tab-usual-items {
+  background-color: $orange;
+  padding: 10px;
+  border-radius: 10px 5px 0px 0px;
+  text-align: center;
+  border-left: 2px solid rgba(0,0,0,0.3);
+  border-bottom: 2px solid rgba(0,0,0,0.3);
+  text-decoration: none;
+  color: white;
+
+  &:hover {
+    color: white;
+  }
+}
+
 .list {
   background-color: white;
   border: 1px solid $turquoise;
   padding: 0;
-  border-radius: 5px;
+  border-radius: 0px 0px 5px 5px;
 }
 
 .list-heading {
   display: flex;
   background-color: $turquoise;
   color: white;
-  padding: 10px 10px;
+  padding: 8px 10px;
   top: 72px;
   position: sticky;
   position: -webkit-sticky; /* Safari */
@@ -116,10 +147,58 @@
   padding: 0;
   margin: 0;
 }
-.list .empty {
+.list .empty, .usual-items .empty {
   text-align: center;
   padding: 30px 20px;
   margin-bottom: 0;
+}
+
+.usual-items {
+  background-color: white;
+  border: 1px solid $orange;
+  padding: 0;
+  border-radius: 0px 0px 5px 5px;
+}
+.usual-items-heading {
+  display: flex;
+  background-color: $orange;
+  color: white;
+  padding: 8px 10px;
+  top: 72px;
+  position: sticky;
+  position: -webkit-sticky; /* Safari */
+  z-index: 500;
+}
+.usual-items-heading .purchased {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 5px 5px 0px;
+}
+.usual-items-heading .name {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  padding: 5px 5px 5px 0px;
+}
+.usual-items-heading .amount {
+  width: 15%;
+  display: flex;
+  align-items: center;
+  padding: 5px 5px 5px 0px;
+}
+.usual-items-heading .comment {
+  width: 35%;
+  display: flex;
+  align-items: center;
+  padding: 5px 5px 5px 0px;
+}
+.usual-items-heading .actions {
+  width: 5%;
+  display: flex;
+  align-items: center;
+  padding: 5px;
 }
 
 .list-container .users {
