--- a/app/assets/stylesheets/components/_item.scss
+++ b/app/assets/stylesheets/components/_item.scss
@@ -12,7 +12,7 @@
  align-items: end;
 }
 
-.item:nth-child(even) {
+.item:nth-of-type(even) {
   background-color: rgba(59, 125, 135, 0.3);
 }
 .item.usual-item:nth-child(even) {
@@ -71,7 +71,7 @@
   flex-grow: 1;
   text-overflow: ellipsis;
 }
-.item:nth-child(even) input, .item:nth-child(even) textarea {
+.item input, .item textarea {
   background-color: transparent;
 }
 .item textarea {
@@ -113,13 +113,13 @@
   justify-content: center;
   padding: 5px;
 }
-.item.item.usual-item .active {
+.item.usual-item .active {
   flex-grow: 1;
   text-align: left;
   display: block;
   padding: 0px;
 }
-.item.item.usual-item .active div {
+.item.usual-item .active div {
   min-width: 135px;
   margin-left: 10%;
 }
@@ -128,6 +128,10 @@
   display: block;
   cursor: pointer;
 }
+.item.usual-item .active label {
+  cursor: default;
+}
+
 .item .active .fa-xmark {
   font-size: 26px;
   color: $orange;
