--- a/app/views/lists/_card.html.erb
+++ b/app/views/lists/_card.html.erb
@@ -1,13 +1,10 @@
-<% colors = ["#3b7d87", "#fd712c", "#66ac8f"] %>
-<%#           turquoise, orange,    green %>
-
 <div class="list-card col-12 col-md-5"  data-controller="new-invitation new-item-dashboard" data-new-invitation-target="card" data-new-item-dashboard-target="card">
 
   <%= link_to(list_path(list)) do %>
     <% if list.image.attached? %>
       <div class="card-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.image.key %>')">
     <% else %>
-      <div class="card-image" style="background-color: <%= colors[rand(0..2)] %>">
+      <div class="card-image" style="background-color: <%= random_color %>">
     <% end %>
     
         <p><%= list.name %></p>
