--- a/app/assets/stylesheets/pages/_list-show.scss
+++ b/app/assets/stylesheets/pages/_list-show.scss
@@ -4,6 +4,7 @@
   // background-color: rgba(253, 113, 44, 0.4);
   background-size: cover;
   background-repeat: no-repeat;
+  opacity: 0.4;
   border-radius: 50%;
   position: fixed;
   z-index: -100;
